--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscoder-copilot",
   "displayName": "VSCoder Copilot",
   "description": "AI-powered mobile development with GitHub Copilot integration, cross-network device pairing, and real-time collaboration",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "publisher": "emirbaycan",
   "license": "MIT",
   "icon": "logo.png",
@@ -43,7 +43,7 @@
     "theme": "dark"
   },
   "activationEvents": [],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -152,30 +152,36 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
-    "compile": "tsc -p ./",
-    "watch": "tsc -watch -p ./",
-    "pretest": "npm run compile && npm run lint",
+    "vscode:prepublish": "npm run package",
+    "compile": "webpack",
+    "watch": "webpack --watch",
+    "package": "webpack --mode production --devtool hidden-source-map",
+    "compile-tests": "tsc -p . --outDir out",
+    "watch-tests": "tsc -p . -w --outDir out",
+    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "test": "node test/runner.js",
-    "test:unit": "npm run compile && node test/unit-runner.js",
-    "test:integration": "npm run compile && node test/integration-runner.js",
+    "test:unit": "npm run compile-tests && node test/unit-runner.js",
+    "test:integration": "npm run compile-tests && node test/integration-runner.js",
     "test:all": "npm run test:unit && npm run test:integration",
     "test:coverage": "echo 'Coverage report not yet implemented'",
     "lint": "echo 'Lint check passed'",
-    "package": "vsce package",
+    "vsce:package": "vsce package",
     "publish": "vsce publish",
-    "clean": "rimraf out"
+    "clean": "rimraf out dist"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
+    "@types/mocha": "^10.0.6",
     "@types/node": "16.x",
+    "@types/sinon": "^17.0.3",
     "@types/vscode": "^1.74.0",
     "@types/ws": "^8.5.4",
-    "@types/mocha": "^10.0.6",
-    "@types/sinon": "^17.0.3",
     "mocha": "^10.2.0",
     "sinon": "^17.0.1",
-    "typescript": "^4.9.4"
+    "ts-loader": "^9.5.4",
+    "typescript": "^4.9.4",
+    "webpack": "^5.101.3",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "express": "^4.18.2",
