--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vscoder-copilot",
   "displayName": "VSCoder Copilot",
   "description": "AI-powered mobile development with GitHub Copilot integration, cross-network device pairing, and real-time collaboration",
-  "version": "1.2.5",
+  "version": "1.2.7",
   "publisher": "emirbaycan",
   "license": "MIT",
   "icon": "logo.png",
@@ -57,6 +57,16 @@
         "category": "VSCoder"
       },
       {
+        "command": "vscoder.pauseSync",
+        "title": "Pause",
+        "category": "VSCoder"
+      },
+      {
+        "command": "vscoder.resumeSync",
+        "title": "Resume",
+        "category": "VSCoder"
+      },
+      {
         "command": "vscoder.showPairingCode",
         "title": "Show Pairing Code",
         "category": "VSCoder"
@@ -80,6 +90,14 @@
         },
         {
           "command": "vscoder.stopServer",
+          "when": "true"
+        },
+        {
+          "command": "vscoder.pauseSync",
+          "when": "true"
+        },
+        {
+          "command": "vscoder.resumeSync",
           "when": "true"
         },
         {
